--- a/main.html
+++ b/main.html
@@ -8,6 +8,38 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+
+	<form method="post">
+		<label for="name">Name*</label>
+		<input type="text" id="name" required >	
+		<label for="email">Email*</label>
+		<input type="email" id="email" required >	
+		 <label for="gender">Gender*</label>
+		<input type="radio" name="gender" value="female" required>
+		<input type="radio" name="gender" value="female" required>
+	
+	<label for="laptop">Laptop*</label>
+		<select id="laptop">
+			<option>ABC</option>
+			<option>PQR</option>
+			<option>XYZ</option>
+		</select>
+	<!-- 	<input type="text" id="password" required >	 -->
+		
+		<label for="portfolio">portfolio</label>
+		<input type="url" id="portfolio" >
+	
+		<label for="age">Age*</label>
+		<input type="text" id="age" required >	
+		<label for="dob">DOB*</label>
+		<input type="date" id="dob" required>
+		<label for="password">Password*</label>
+		
+		<input type="password" id="password" required>
+			<button type="submit" value="submit">Submit</button>
+	
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
