--- a/main.html
+++ b/main.html
@@ -16,8 +16,10 @@
 		<label for="email">Email*</label>
 		<input type="email" id="email" required >	
 		 <label for="gender">Gender*</label>
+		 <label for="male">Male</label>
 		<input type="radio" name="gender" value="female" required>
-		<input type="radio" name="gender" value="female" required>
+		<label for="female">Female</label>
+		<input type="radio" name="gender" value="male" required>
 	
 	<label for="laptop">Laptop*</label>
 		<select id="laptop">
@@ -39,6 +41,11 @@
 		<input type="password" id="password" required>
 			<button type="submit" value="submit">Submit</button>
 	
+	</form>
+	<form action="no_need" method="post">
+		<label for="name">name</label>
+		<input type="text" id="name" required>
+		<label for="email">Email</label>
 	</form>
     <script type="text/javascript" src="./script.js">
 </script>
